# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# We strongly advise that any project that uses the ROS Central Registry
# declares itself as a module. Even though bazel's naming allows for
# more flexibility you should only use lower-case characters and
# underscores, per REP-0144 (https://ros.org/reps/rep-0144.html).

module(
    name = "rcr",
    version = "0.0.2",
    bazel_compatibility = [">=7.2.1"],
)

# BCR dependencies

bazel_dep(name = "aspect_rules_py", version = "1.8.6")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.8.3")
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "toolchains_llvm", version = "1.6.0")

# RCR dependencies

#bazel_dep(name = "ros", version = "rolling.2026-01-21")

# # System dependencies

# bazel_dep(name = "asio", version = "1.34.2.bcr.0")
# bazel_dep(name = "bazel_skylib", version = "1.9.0")
# bazel_dep(name = "cmake_configure_file", version = "0.1.6")
# bazel_dep(name = "google_benchmark", version = "1.9.4")
# bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
# bazel_dep(name = "platforms", version = "1.0.0")
# bazel_dep(name = "protobuf", version = "33.4")
# bazel_dep(name = "rules_cc", version = "0.2.17")
# bazel_dep(name = "rules_python", version = "1.8.3")
# bazel_dep(name = "aspect_rules_py", version = "1.8.6")
# bazel_dep(name = "rules_rust", version = "0.68.1")
# bazel_dep(name = "rules_shell", version = "0.6.1")
# bazel_dep(name = "toolchains_llvm", version = "1.6.0")
# bazel_dep(name = "userspace_rcu", version = "0.15.4")

# # Third party (things we intend to add to the BCR)

# bazel_dep(name = "cyclonedds", version = "0.10.5")
# bazel_dep(name = "fastcdr", version = "2.3.5.bcr.0")
# bazel_dep(name = "fastdds", version = "3.4.2")
# bazel_dep(name = "lttng-ust", version = "2.14.0")
# bazel_dep(name = "mimick", version = "0.9.0")
# bazel_dep(name = "zenoh-c", version = "1.7.2")
# bazel_dep(name = "zenoh-cpp", version = "1.7.2")

# # Dependencies for a specific rolling snapshot

# bazel_dep(name = "rosdistro", version = "rolling-2025-09-05")

# # ROS packages (things we intend to add to the RCR)

# bazel_dep(name = "action_msgs", version = "2.4.1")
# bazel_dep(name = "ament_clang_format", version = "0.20.1")
# bazel_dep(name = "ament_clang_tidy", version = "0.20.1")
# bazel_dep(name = "ament_cmake_auto", version = "2.8.4")
# bazel_dep(name = "ament_cmake_clang_format", version = "0.20.1")
# bazel_dep(name = "ament_cmake_clang_tidy", version = "0.20.1")
# bazel_dep(name = "ament_cmake_copyright", version = "0.20.1")
# bazel_dep(name = "ament_cmake_core", version = "2.8.4")
# bazel_dep(name = "ament_cmake_cppcheck", version = "0.20.1")
# bazel_dep(name = "ament_cmake_cpplint", version = "0.20.1")
# bazel_dep(name = "ament_cmake_export_definitions", version = "2.8.4")
# bazel_dep(name = "ament_cmake_export_dependencies", version = "2.8.4")
# bazel_dep(name = "ament_cmake_export_include_directories", version = "2.8.4")
# bazel_dep(name = "ament_cmake_export_libraries", version = "2.8.4")
# bazel_dep(name = "ament_cmake_export_link_flags", version = "2.8.4")
# bazel_dep(name = "ament_cmake_export_targets", version = "2.8.4")
# bazel_dep(name = "ament_cmake_flake8", version = "0.20.1")
# bazel_dep(name = "ament_cmake_gen_version_h", version = "2.8.4")
# bazel_dep(name = "ament_cmake_gmock", version = "2.8.4")
# bazel_dep(name = "ament_cmake_google_benchmark", version = "2.8.4")
# bazel_dep(name = "ament_cmake_gtest", version = "2.8.4")
# bazel_dep(name = "ament_cmake_include_directories", version = "2.8.4")
# bazel_dep(name = "ament_cmake_libraries", version = "2.8.4")
# bazel_dep(name = "ament_cmake_lint_cmake", version = "0.20.1")
# bazel_dep(name = "ament_cmake_mypy", version = "0.20.1")
# bazel_dep(name = "ament_cmake_pclint", version = "0.20.1")
# bazel_dep(name = "ament_cmake_pep257", version = "0.20.1")
# bazel_dep(name = "ament_cmake_pycodestyle", version = "0.20.1")
# bazel_dep(name = "ament_cmake_pyflakes", version = "0.20.1")
# bazel_dep(name = "ament_cmake_pytest", version = "2.8.4")
# bazel_dep(name = "ament_cmake_python", version = "2.8.4")
# bazel_dep(name = "ament_cmake_ros_core", version = "0.15.1")
# bazel_dep(name = "ament_cmake_ros", version = "0.15.1")
# bazel_dep(name = "ament_cmake_target_dependencies", version = "2.8.4")
# bazel_dep(name = "ament_cmake_test", version = "2.8.4")
# bazel_dep(name = "ament_cmake_uncrustify", version = "0.20.1")
# bazel_dep(name = "ament_cmake_vendor_package", version = "2.8.4")
# bazel_dep(name = "ament_cmake_version", version = "2.8.4")
# bazel_dep(name = "ament_cmake_xmllint", version = "0.20.1")
# bazel_dep(name = "ament_cmake", version = "2.8.4")
# bazel_dep(name = "ament_copyright", version = "0.20.1")
# bazel_dep(name = "ament_cppcheck", version = "0.20.1")
# bazel_dep(name = "ament_cpplint", version = "0.20.1")
# bazel_dep(name = "ament_flake8", version = "0.20.1")
# bazel_dep(name = "ament_index_cpp", version = "1.12.0")
# bazel_dep(name = "ament_index_python", version = "1.12.0")
# bazel_dep(name = "ament_lint_auto", version = "0.20.1")
# bazel_dep(name = "ament_lint_cmake", version = "0.20.1")
# bazel_dep(name = "ament_lint_common", version = "0.20.1")
# bazel_dep(name = "ament_lint", version = "0.20.1")
# bazel_dep(name = "ament_mypy", version = "0.20.1")
# bazel_dep(name = "ament_package", version = "0.18.0")
# bazel_dep(name = "ament_pclint", version = "0.20.1")
# bazel_dep(name = "ament_pep257", version = "0.20.1")
# bazel_dep(name = "ament_pycodestyle", version = "0.20.1")
# bazel_dep(name = "ament_pyflakes", version = "0.20.1")
# bazel_dep(name = "ament_uncrustify", version = "0.20.1")
# bazel_dep(name = "ament_xmllint", version = "0.20.1")
# bazel_dep(name = "builtin_interfaces", version = "2.4.1")
# bazel_dep(name = "class_loader", version = "2.9.0")
# bazel_dep(name = "common_interfaces", version = "5.8.1")
# bazel_dep(name = "composition_interfaces", version = "2.4.1")
# bazel_dep(name = "console_bridge_vendor", version = "1.9.1")
# bazel_dep(name = "desktop_full", version = "0.13.0")
# bazel_dep(name = "desktop", version = "0.13.0")
# bazel_dep(name = "diagnostic_msgs", version = "5.8.1")
# bazel_dep(name = "domain_coordinator", version = "0.15.1")
# bazel_dep(name = "example_interfaces", version = "0.14.1")
# bazel_dep(name = "examples_tf2_py", version = "0.43.0")
# bazel_dep(name = "geometry_msgs", version = "5.8.1")
# bazel_dep(name = "geometry2", version = "0.43.0")
# bazel_dep(name = "launch_pytest", version = "3.9.1")
# bazel_dep(name = "launch_ros", version = "0.29.1")
# bazel_dep(name = "launch_testing_ament_cmake", version = "3.9.1")
# bazel_dep(name = "launch_testing_ros", version = "0.29.1")
# bazel_dep(name = "launch_testing", version = "3.9.1")
# bazel_dep(name = "launch_xml", version = "3.9.1")
# bazel_dep(name = "launch_yaml", version = "3.9.1")
# bazel_dep(name = "launch", version = "3.9.1")
# bazel_dep(name = "libstatistics_collector", version = "2.1.1")
# bazel_dep(name = "lifecycle_msgs", version = "2.4.1")
# bazel_dep(name = "lttngpy", version = "8.8.0")
# bazel_dep(name = "nav_msgs", version = "5.8.1")
# bazel_dep(name = "osrf_pycommon", version = "2.1.4")
# bazel_dep(name = "osrf_testing_tools_cpp", version = "2.3.0")
# bazel_dep(name = "perception", version = "0.13.0")
# bazel_dep(name = "performance_test_fixture", version = "0.4.0")
# bazel_dep(name = "pluginlib", version = "5.7.0")
# bazel_dep(name = "rcl_action", version = "10.2.2")
# bazel_dep(name = "rcl_interfaces", version = "2.4.1")
# bazel_dep(name = "rcl_lifecycle", version = "10.2.2")
# bazel_dep(name = "rcl_logging_interface", version = "3.3.0")
# bazel_dep(name = "rcl_logging_noop", version = "3.3.0")
# bazel_dep(name = "rcl_logging_spdlog", version = "3.3.0")
# bazel_dep(name = "rcl_yaml_param_parser", version = "10.2.2")
# bazel_dep(name = "rcl", version = "10.2.2")
# bazel_dep(name = "rclc", version = "6.2.0")
# bazel_dep(name = "rclc_examples", version = "6.2.0")
# bazel_dep(name = "rclc_lifecycle", version = "6.2.0")
# bazel_dep(name = "rclc_parameter", version = "6.2.0")
# bazel_dep(name = "rclcpp_action", version = "30.0.0")
# bazel_dep(name = "rclcpp_components", version = "30.0.0")
# bazel_dep(name = "rclcpp_lifecycle", version = "30.0.0")
# bazel_dep(name = "rclcpp", version = "30.0.0")
# bazel_dep(name = "rclpy", version = "9.2.0")
# bazel_dep(name = "rcpputils", version = "2.14.2")
# bazel_dep(name = "rcutils", version = "7.0.0")
# bazel_dep(name = "rmw_connextdds_common", version = "1.2.1")
# bazel_dep(name = "rmw_connextdds", version = "1.2.1")
# bazel_dep(name = "rmw_connextddsmicro", version = "1.2.1")
# bazel_dep(name = "rmw_cyclonedds_cpp", version = "4.1.1")
# bazel_dep(name = "rmw_dds_common", version = "4.0.0")
# bazel_dep(name = "rmw_fastrtps_cpp", version = "9.4.1")
# bazel_dep(name = "rmw_fastrtps_dynamic_cpp", version = "9.4.1")
# bazel_dep(name = "rmw_fastrtps_shared_cpp", version = "9.4.1")
# bazel_dep(name = "rmw_implementation_cmake", version = "7.9.0")
# bazel_dep(name = "rmw_implementation", version = "3.1.1")
# bazel_dep(name = "rmw_security_common", version = "7.9.0")
# bazel_dep(name = "rmw_test_fixture_implementation", version = "0.15.1")
# bazel_dep(name = "rmw_test_fixture", version = "0.15.1")
# bazel_dep(name = "rmw_zenoh_cpp", version = "0.8.1")
# bazel_dep(name = "rmw", version = "7.9.0")
# bazel_dep(name = "ros_base", version = "0.13.0")
# bazel_dep(name = "ros_core", version = "0.13.0")
# bazel_dep(name = "ros_environment", version = "4.4.1")
# bazel_dep(name = "ros_testing", version = "0.9.0")
# bazel_dep(name = "ros2action", version = "0.39.2")
# bazel_dep(name = "ros2cli_common_extensions", version = "0.5.1")
# bazel_dep(name = "ros2cli_test_interfaces", version = "0.39.2")
# bazel_dep(name = "ros2cli", version = "0.39.2")
# bazel_dep(name = "ros2component", version = "0.39.2")
# bazel_dep(name = "ros2doctor", version = "0.39.2")
# bazel_dep(name = "ros2interface", version = "0.39.2")
# bazel_dep(name = "ros2launch", version = "0.29.1")
# bazel_dep(name = "ros2lifecycle_test_fixtures", version = "0.39.2")
# bazel_dep(name = "ros2lifecycle", version = "0.39.2")
# bazel_dep(name = "ros2multicast", version = "0.39.2")
# bazel_dep(name = "ros2node", version = "0.39.2")
# bazel_dep(name = "ros2param", version = "0.39.2")
# bazel_dep(name = "ros2pkg", version = "0.39.2")
# bazel_dep(name = "ros2run", version = "0.39.2")
# bazel_dep(name = "ros2service", version = "0.39.2")
# bazel_dep(name = "ros2test", version = "0.9.0")
# bazel_dep(name = "ros2topic", version = "0.39.2")
# bazel_dep(name = "ros2trace", version = "8.8.0")
# bazel_dep(name = "rosgraph_msgs", version = "2.4.1")
# bazel_dep(name = "rosidl_adapter_proto", version = "0.0.1")
# bazel_dep(name = "rosidl_adapter", version = "5.0.0")
# bazel_dep(name = "rosidl_cli", version = "5.0.0")
# bazel_dep(name = "rosidl_cmake", version = "5.0.0")
# bazel_dep(name = "rosidl_core_generators", version = "0.4.0")
# bazel_dep(name = "rosidl_core_runtime", version = "0.4.0")
# bazel_dep(name = "rosidl_default_generators", version = "1.8.1")
# bazel_dep(name = "rosidl_default_runtime", version = "1.8.1")
# bazel_dep(name = "rosidl_dynamic_typesupport_fastrtps", version = "0.5.0")
# bazel_dep(name = "rosidl_dynamic_typesupport", version = "0.4.0")
# bazel_dep(name = "rosidl_generator_c", version = "5.0.0")
# bazel_dep(name = "rosidl_generator_cpp", version = "5.0.0")
# bazel_dep(name = "rosidl_generator_py", version = "0.25.0")
# bazel_dep(name = "rosidl_generator_tests", version = "5.0.0")
# bazel_dep(name = "rosidl_generator_type_description", version = "5.0.0")
# bazel_dep(name = "rosidl_parser", version = "5.0.0")
# bazel_dep(name = "rosidl_pycommon", version = "5.0.0")
# bazel_dep(name = "rosidl_runtime_c", version = "5.0.0")
# bazel_dep(name = "rosidl_runtime_cpp", version = "5.0.0")
# bazel_dep(name = "rosidl_runtime_py", version = "0.15.0")
# bazel_dep(name = "rosidl_typeadapter_protobuf_test", version = "0.0.1")
# bazel_dep(name = "rosidl_typesupport_c", version = "3.4.0")
# bazel_dep(name = "rosidl_typesupport_cpp", version = "3.4.0")
# bazel_dep(name = "rosidl_typesupport_fastrtps_c", version = "3.9.0")
# bazel_dep(name = "rosidl_typesupport_fastrtps_cpp", version = "3.9.0")
# bazel_dep(name = "rosidl_typesupport_interface", version = "5.0.0")
# bazel_dep(name = "rosidl_typesupport_introspection_c", version = "5.0.0")
# bazel_dep(name = "rosidl_typesupport_introspection_cpp", version = "5.0.0")
# bazel_dep(name = "rosidl_typesupport_introspection_tests", version = "5.0.0")
# bazel_dep(name = "rosidl_typesupport_protobuf_c", version = "0.0.1")
# bazel_dep(name = "rosidl_typesupport_protobuf_cpp", version = "0.0.1")
# bazel_dep(name = "rosidl_typesupport_protobuf", version = "0.0.1")
# bazel_dep(name = "rosidl_typesupport_tests", version = "3.4.0")
# bazel_dep(name = "rpyutils", version = "0.7.0")
# bazel_dep(name = "rti_connext_dds_cmake_module", version = "1.2.1")
# bazel_dep(name = "sensor_msgs_py", version = "5.8.1")
# bazel_dep(name = "sensor_msgs", version = "5.8.1")
# bazel_dep(name = "service_msgs", version = "2.4.1")
# bazel_dep(name = "shape_msgs", version = "5.8.1")
# bazel_dep(name = "simulation", version = "0.13.0")
# bazel_dep(name = "sros2_cmake", version = "0.16.1")
# bazel_dep(name = "sros2", version = "0.16.1")
# bazel_dep(name = "statistics_msgs", version = "2.4.1")
# bazel_dep(name = "std_msgs", version = "5.8.1")
# bazel_dep(name = "std_srvs", version = "5.8.1")
# bazel_dep(name = "stereo_msgs", version = "5.8.1")
# bazel_dep(name = "test_interface_files", version = "0.14.1")
# bazel_dep(name = "test_launch_ros", version = "0.29.1")
# bazel_dep(name = "test_launch_testing", version = "3.9.1")
# bazel_dep(name = "test_msgs", version = "2.4.1")
# bazel_dep(name = "test_osrf_testing_tools_cpp", version = "2.3.0")
# bazel_dep(name = "test_rmw_implementation", version = "3.1.1")
# bazel_dep(name = "test_ros2trace", version = "8.8.0")
# bazel_dep(name = "test_tf2", version = "0.43.0")
# bazel_dep(name = "test_tracetools_launch", version = "8.8.0")
# bazel_dep(name = "test_tracetools", version = "8.8.0")
# bazel_dep(name = "tf2_bullet", version = "0.43.0")
# bazel_dep(name = "tf2_eigen_kdl", version = "0.43.0")
# bazel_dep(name = "tf2_eigen", version = "0.43.0")
# bazel_dep(name = "tf2_geometry_msgs", version = "0.43.0")
# bazel_dep(name = "tf2_kdl", version = "0.43.0")
# bazel_dep(name = "tf2_msgs", version = "0.43.0")
# bazel_dep(name = "tf2_py", version = "0.43.0")
# bazel_dep(name = "tf2_ros_py", version = "0.43.0")
# bazel_dep(name = "tf2_ros", version = "0.43.0")
# bazel_dep(name = "tf2_sensor_msgs", version = "0.43.0")
# bazel_dep(name = "tf2_tools", version = "0.43.0")
# bazel_dep(name = "tf2", version = "0.43.0")
# bazel_dep(name = "tracetools_launch", version = "8.8.0")
# bazel_dep(name = "tracetools_read", version = "8.8.0")
# bazel_dep(name = "tracetools_test", version = "8.8.0")
# bazel_dep(name = "tracetools_trace", version = "8.8.0")
# bazel_dep(name = "tracetools", version = "8.8.0")
# bazel_dep(name = "trajectory_msgs", version = "5.8.1")
# bazel_dep(name = "type_description_interfaces", version = "2.4.1")
# bazel_dep(name = "unique_identifier_msgs", version = "2.8.0")
# bazel_dep(name = "visualization_msgs", version = "5.8.1")
# bazel_dep(name = "zenoh_security_tools", version = "0.8.1")

# C++ toolchain (offers amd64 and arm64 for linux, windows and darwin)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(llvm_version = "20.1.7")
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

# Use a RUST compiler known to work with Zenoh.

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.85.0"],
)

# We are currently using Python 3.11 because the rosdistro module depends on
# distutils, which was removed from Python 3.12 onwards.

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_ros_central_registry",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip_ros_central_registry")
