# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@docs_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "sphinx_build",
    srcs = ["sphinx_build.py"],
    main = "sphinx_build.py",
    deps = [
        requirement("sphinx"),
        requirement("sphinx-tabs"),
        requirement("furo"),
    ],
)

genrule(
    name = "html",
    srcs = glob([
        "source/**",
        "_static/**",
    ]),
    outs = ["html_docs.tar.gz"],
    cmd = "$(location :sphinx_build) -M html docs/source $(@D)/build && " +
          "tar -czf $@ -C $(@D)/build/html .",
    tools = [":sphinx_build"],
)

py_binary(
    name = "preview",
    srcs = ["docs_runner.py"],
    main = "docs_runner.py",
    tags = ["requires-network"],
    deps = [
        requirement("sphinx"),
        requirement("sphinx-autobuild"),
        requirement("sphinx-tabs"),
        requirement("furo"),
    ],
)
