# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@aspect_rules_py//py:defs.bzl", "py_binary")
load("@rosidl_adapter_proto//:rules.bzl", "proto_ros_library")
load("@rosidl_generator_cpp//:rules.bzl", "cc_ros_library")
load("@rosidl_generator_py//:rules.bzl", "py_ros_library")
load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

# Generate .proto files for the ros_interface in ./msg/BUILD.bazel.

proto_ros_library(
    name = "example_proto_files",
    deps = [
        "//msg:ExampleMessage",
    ],
)

# Generate language bindings to the ros_interface in ./msg/BUILD.bazel.

cc_ros_library(
    name = "example_ros_cc_msgs",
    deps = [
        "//msg:ExampleMessage",
    ],
)

py_ros_library(
    name = "example_ros_py_msgs",
    deps = [
        "//msg:ExampleMessage",
    ],
)

# C++ examples (note that cc_ros_library includes proto type support)

cc_binary(
    name = "example_ros_publisher_cc",
    srcs = ["ros/example_ros_publisher.cc"],
    deps = [
        ":example_ros_cc_msgs",
        "@rclcpp",
    ],
)

cc_binary(
    name = "example_ros_subscriber_cc",
    srcs = ["ros/example_ros_subscriber.cc"],
    deps = [
        ":example_ros_cc_msgs",
        "@rclcpp",
    ],
)

# Protobuf pipeline

cc_binary(
    name = "example_proto_publisher_cc",
    srcs = ["proto/example_proto_publisher.cc"],
    deps = [
        ":example_ros_cc_msgs",
        "@rclcpp",
    ],
)

cc_binary(
    name = "example_proto_subscriber_cc",
    srcs = ["proto/example_proto_subscriber.cc"],
    deps = [
        ":example_ros_cc_msgs",
        "@rclcpp",
    ],
)

# Python examples

py_binary(
    name = "example_ros_publisher_py",
    srcs = ["ros/example_ros_publisher.py"],
    main = "ros/example_ros_publisher.py",
    deps = [
        ":example_ros_py_msgs",
        "@rclpy",
    ],
)

py_binary(
    name = "example_ros_subscriber_py",
    srcs = ["ros/example_ros_subscriber.py"],
    main = "ros/example_ros_subscriber.py",
    deps = [
        ":example_ros_py_msgs",
        "@rclpy",
    ],
)
