# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@aspect_rules_py//py:defs.bzl", "py_binary")
load("@pip_ros_central_registry//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

#### DEVELOPER PREVIEW TOOLING (DEPRECATED) ##############################

# Runs through all packages in the registry_scraper_data.yaml, calculating
# a diff between the rolling-bazel branch of the submodule in the registry
# and the upstream version of the package. It then converts this diff to
# patches and overlays, and constructs a versioned Bazel module for each
# package in the 'modules' folder of the repo. Run in the following way:
# > bazel run //tools:manage_submodules -- $PWD
py_binary(
    name = "regenerate_modules",
    srcs = ["registry_scraper_tool.py"],
    data = [
        "registry_scraper_data.yaml",
    ],
    main = "registry_scraper_tool.py",
    deps = [
        "@rosdistro//bazel/python:gitpython",
        "@rosdistro//bazel/python:pyyaml",
        "@rosdistro//bazel/python:urllib3",
        "@rules_python//python/runfiles",
    ],
)

# Tool for performing bulk updates to the registry's git submodules. Offers
# three verbs: "clean", "commit" and "push" used in the following way:
# > bazel run //tools:manage_submodules -- $PWD clean
# > bazel run //tools:manage_submodules -- $PWD commit rolling-bazel
# > bazel run //tools:manage_submodules -- $PWD push rolling-bazel
py_binary(
    name = "manage_submodules",
    srcs = ["manage_submodules.py"],
)

#### RELEASE TOOLING (WORK IN PROGRESS) ##################################

# This is a wrapper around superflore's gen-bazel generator. It is intended
# to be run in the following way:
# > bazel run //tools:superflore-gen-bazel --  \
#   --ros-release rolling/2026-01-21 \
#   --dry-run \
#   --no-branch \
#   --no-commit \
#   --output-repository-path $PWD
# It will then create a new branch in the registry repo with the generated
# bazel files.
py_binary(
    name = "superflore-gen-bazel",
    srcs = glob(["superflore/superflore/**/*.py"]),
    imports = ["superflore"],
    main = "superflore/superflore/generators/bazel/run.py",
    deps = [
        requirement("catkin_pkg"),
        requirement("docker"),
        requirement("flake8-import-order"),
        requirement("flake8"),
        requirement("gitpython"),
        requirement("packaging"),
        requirement("pep8"),
        requirement("pygithub"),
        requirement("pynose"),
        requirement("pyyaml"),
        requirement("requests"),
        requirement("rosdep"),
        requirement("rosdistro"),
        requirement("rosinstall_generator"),
        requirement("rospkg"),
        requirement("setuptools"),
        requirement("termcolor"),
        requirement("xmltodict"),
    ],
)

#### INTERFACE AUTOGEN TOOLING ############################################

# Generates BUILD.bazel files for ROS 2 interface definitions (.msg, .srv,
# .action, .idl). Scans subdirectories for interface files, parses their
# field types to discover cross-package dependencies, and emits the
# appropriate Bazel rules. Run in the following way:
# > bazel run //tools:interface_autogen -- $PWD/submodules/common_interfaces
py_binary(
    name = "interface_autogen",
    srcs = ["interface_autogen.py"],
)

#### UBUNTU PYTHON PACKAGES TOOLING ######################################

# Scrapes the Ubuntu snapshot archive for all python3-* packages available
# for a given Ubuntu version on a given date, and writes them as pip-style
# requirements (package==version) to an output file. Run in the following
# way:
# > bazel run //tools:ubuntu_python_packages -- \
#   --ubuntu-version 24.04 \
#   --date 2026-01-21 \
#   --output $PWD/requirements.in
py_binary(
    name = "ubuntu_python_packages",
    srcs = ["ubuntu_python_packages.py"],
)
