# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")
load("@pip_ros_central_registry//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

#### DEVELOPER PREVIEW TOOLING (DEPRECATED) ##############################

# Runs through all packages in the registry_scraper_data.yaml, calculating
# a diff between the rolling-bazel branch of the submodule in the registry
# and the upstream version of the package. It then converts this diff to
# patches and overlays, and constructs a versioned Bazel module for each
# package in the 'modules' folder of the repo. Run in the following way:
# > bazel run //tools:manage_submodules -- $PWD
py_binary(
    name = "regenerate_modules",
    srcs = ["registry_scraper_tool.py"],
    data = [
        "registry_scraper_data.yaml",
    ],
    main = "registry_scraper_tool.py",
    deps = [
        "@rosdistro//bazel/python:gitpython",
        "@rosdistro//bazel/python:pyyaml",
        "@rosdistro//bazel/python:urllib3",
        "@rules_python//python/runfiles",
    ],
)

# Tool for performing bulk updates to the registry's git submodules. Offers
# three verbs: "clean", "commit" and "push" used in the following way:
# > bazel run //tools:manage_submodules -- $PWD clean
# > bazel run //tools:manage_submodules -- $PWD commit rolling-bazel
# > bazel run //tools:manage_submodules -- $PWD push rolling-bazel
py_binary(
    name = "manage_submodules",
    srcs = ["manage_submodules.py"],
)

#### INTERFACE AUTOGEN TOOLING ############################################

# Generates BUILD.bazel files for ROS 2 interface definitions (.msg, .srv,
# .action, .idl). Scans subdirectories for interface files, parses their
# field types to discover cross-package dependencies, and emits the
# appropriate Bazel rules. Run in the following way:
# > bazel run //tools:interface_autogen -- $PWD/submodules/common_interfaces
py_binary(
    name = "interface_autogen",
    srcs = ["interface_autogen.py"],
)

#### UBUNTU PYTHON PACKAGES TOOLING ######################################

# Scrapes the Ubuntu snapshot archive for all python3-* packages available
# for a given Ubuntu version on a given date, and writes them as pip-style
# requirements (package==version) to an output file. Run in the following
# way:
# > bazel run //tools:ubuntu_python_packages -- \
#   --ubuntu-version 24.04 \
#   --date 2026-01-21 \
#   --output $PWD/requirements.in
py_binary(
    name = "ubuntu_python_packages",
    srcs = ["ubuntu_python_packages.py"],
)

#### UBUNTU PYTHON PACKAGES TOOLING ######################################

py_library(
    name = "bazelflore",
    srcs = glob(["bazelflore/bazelflore/**/*.py"]),
    imports = ["bazelflore"],
    deps = [
        requirement("requests"),
        requirement("rosdistro"),
        requirement("rosinstall_generator"),
    ],
)

# STEP 1 : Bootstrap a release
##########################################################################
# This probes rosdistro to get a release tag, then looks up Debian package
# versions at the time of release, and transforms this to a set of BCR and
# RCR packages. It thens sets up all packages for the release. Example:
#
# > bazel run //tools:release_bootstrap -- $PWD
#   --ros-release-distro rolling \
#   --ros-release-date 2026-01-21 \
#   --ubuntu-distro noble \
#   --ubuntu-architecture amd64
#
# Then look at the new modules in the 'modules' folder.
#
py_binary(
    name = "release_bootstrap",
    srcs = ["release_bootstrap.py"],
    deps = [
        ":bazelflore",
        requirement("yaspin"),
    ],
)

# STEP 2 : Migrate a release
##########################################################################
# Take an existing release and create a new patch release with updated
# package versions, by copying the overlays and patches from an the latest
# distro release to the new release to create a patch release. This also
# autogenerates the interface BUILD files for the new release, avoiding
# the need to do this manually by hand, which is laborious.
#
# Example:
#
# > bazel run //tools:release_migrate -- $PWD \
#   --release lyrical.2026-05-15 \
#   --from-distro rolling \
#   --autogen-interfaces
#
# Then look at the new modules in the 'modules' folder.
#
py_binary(
    name = "release_migrate",
    srcs = ["release_migrate.py"],
    deps = [
        ":bazelflore",
        requirement("yaspin"),
    ],
)

# STEP 3 : Set up a patch workspace.
########################################################################
# This creates a separate Bazel workspace in the folder "workspaces". It
# supports the "bazel vendor" command to populate a local checkout that
# you can edit and test in place. The idea is that you iterate here.
#
# Example:
#
# > bazel run //tools:workspace_setup -- \
#   --rcr-base $PWD \
#   --release rolling.2026-01-21
#   [repo1] [repo2] ...
#
# Look at the workspaces/rolling.2026-01-21.bcr.X
#
py_binary(
    name = "workspace_setup",
    srcs = ["bazelflore/workspace_setup.py"],
)

# STEP 4 : Apply a patch workspace.
########################################################################
# After you have finished iterating on a patch workspace, you can apply
# it to the release.
#
# Example:
#
# > bazel run //tools:workspace_apply --
#   --rcr-base $PWD \
#   --release rolling.2026-01-21
#   [repo1] [repo2] ...
#
py_binary(
    name = "workspace_apply",
    srcs = ["bazelflore/workspace_apply.py"],
)
