
# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Imports

load("@ros//:defs.bzl", "ros_interface", "ros_package")

# Interfaces

ros_interface(
    name = "srv__CancelGoal",
    src = "srv/CancelGoal.srv",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__GoalInfo",
    ],
)

ros_interface(
    name = "msg__GoalInfo",
    src = "msg/GoalInfo.msg",
    visibility = ["//visibility:public"],
    deps = [
        "@builtin_interfaces//:msg__Time",
        "@unique_identifier_msgs//:msg__UUID",
    ],
)

ros_interface(
    name = "msg__GoalStatus",
    src = "msg/GoalStatus.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__GoalInfo",
    ],
)

ros_interface(
    name = "msg__GoalStatusArray",
    src = "msg/GoalStatusArray.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__GoalStatus",
    ],
)

# Package

ros_package(
    name = "action_msgs",
    interfaces = [
        ":msg__GoalInfo",
        ":msg__GoalStatus",
        ":msg__GoalStatusArray",
        ":srv__CancelGoal",
    ],
    visibility = ["//visibility:public"],
)
